# talki

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
talki/: __init__.py  __main__.py  app.py  audio_capture.py  config.py  hotkey_manager.py  platform_utils.py  settings_ui.py  text_injector.py  transcriber.py  tray_icon.py
