[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talki"
version = "0.1.0"
description = "Push-to-talk (or toggle) speech-to-text that injects into the focused app"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Talki contributors"}]
keywords = ["speech", "dictation", "whisper", "hotkey", "keyboard"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Utilities",
]
dependencies = [
  "PySide6>=6.6",
  "sounddevice>=0.4",
  "numpy>=1.24",
  "scipy>=1.10",
  "faster-whisper>=1.0",
  "evdev>=1.6; sys_platform == 'linux'",
  "pynput>=1.7; sys_platform != 'linux'",
  "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
  "pyobjc-framework-Cocoa>=9.0; sys_platform == 'darwin'",
]

[project.scripts]
talki = "talki.__main__:main"

[tool.setuptools.packages.find]
include = ["talki*"]
